# quant-project

./: .gitattributes  .gitignore  BACKTEST_README.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sh601988.csv  sh601988.parquet
data/sh601988/: sh601988.csv  sh601988.parquet
docs/: LIMIT_UP_STRATEGY.md  今日工作总结_20260122.md  代码阅读指南.md  基于Python的量化学习.md  基础知识.md
examples/: backtest_example.py  limit_up_example.py
notebook/: 1.ipynb  Day1_数据获取_收盘价与成交量_K线.ipynb  notebooks_02_day2_sma_backtest.ipynb
reports/: sma_backtest.html  sma_backtest_stats.csv
src/quant_project/: __init__.py  analysis.py  backtest.py  backtest_runner.py  data_loader.py  stock_selector.py
src/quant_project/strategies/: __init__.py  base.py  high_yield.py  limit_up.py  selection.py  trading.py
src/test/: akshare_test.ipynb  high_yield_strategy.py  test_akshare_fixed.py  test_akshare_simple.py  test_dataclass_cfg.ipynb  test_get_data.ipynb
